--- a/app/src/main/res/layout/note_element_layout.xml
+++ b/app/src/main/res/layout/note_element_layout.xml
@@ -2,8 +2,9 @@
 
 <!-- I also set the width to match the parent so it would fill our column -->
 
-<androidx.appcompat.widget.CardView xmlns:android="http://schemas.android.com/apk/res/android"
-    xmlns:card_view="http://schemas.android.com/apk/res-auto"
+<androidx.cardview.widget.CardView xmlns:android="http://schemas.android.com/apk/res/android"
+    xmlns:app="http://schemas.android.com/apk/res-auto"
+    app:cardBackgroundColor="@color/reddishColorPrimary"
     android:id="@+id/note_element_parent_layout"
     android:layout_width="match_parent"
     android:layout_height="wrap_content"
@@ -37,4 +38,4 @@
 
     </LinearLayout>
 
-</androidx.appcompat.widget.CardView>
+</androidx.cardview.widget.CardView>
